# KurobaEx-parser

./: Cargo.toml
src/: comment_parser.rs  main.rs  parser.rs  post_parser.rs
src/html_parser/: element.rs  node.rs  parser.rs
src/new_post_parser_lib/: comment_parser.rs  lib.rs  parsing_error.rs  post_parser.rs
src/new_post_parser_lib/html_parser/: element.rs  node.rs  parser.rs
src/new_post_parser_lib/rules/: abbr.rs  anchor.rs  bold.rs  line_break.rs  pre.rs  rule_handler.rs  span.rs  spoiler.rs  style.rs  table.rs  table_data.rs  table_row.rs  word_break.rs
src/new_post_parser_lib/util/: color_decoder.rs  helpers.rs  macroses.rs  style_tag_value_decoder.rs  theme_json_extractor.rs
src/rules/: anchor.rs  line_break.rs  rule_handler.rs  span.rs  spoiler.rs  word_break.rs
src/tests/: html_parser_tests.rs  post_parser_tests.rs
src/util/: helpers.rs  macroses.rs
tests/: html_parser_tests.rs  post_parser_tests.rs
