[package]
name = "new_post_parser"
version = "0.1.0"
authors = ["k1rakishou <kez1911@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html_parser = "0.6.2"
html-escape = "0.2.9"
serde = "1.0.125"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.5.0", features = ["full"] }