[package]
name = "new_post_parser"
version = "0.1.0"
authors = ["k1rakishou <kez1911@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html-escape = "0.2.9"
serde = "1.0.125"
lazy_static = "1.4.0"
linked-hash-map = "0.5.4"
regex = "1.4.6"