[package]
name = "kuroba_ex_new_post_parser"
version = "0.2.8"
authors = ["k1rakishou <kez1911@protonmail.com>"]
edition = "2018"

[lib]
name = "new_post_parser_lib"
path = "src/new_post_parser_lib/lib.rs"

[[bin]]
name = "new_post_parser_main"
path = "src/main.rs"

[profile.release]
lto = true

[dependencies]
html-escape = "0.2.9"
lazy_static = "1.4.0"
linked-hash-map = "0.5.4"
regex = "1.4.6"